# bevy_jam_potion_rougelike

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: compile-for-platform.yml
assets/: FrogEyes.ase  Heart.ase
src/: animation.rs  enemy.rs  health.rs  ingredients.rs  input.rs  inventory.rs  lib.rs  main.rs  mouse.rs  music.rs  player.rs  potions.rs  prelude.rs  start_menu.rs  world_gen.rs
src/map/: mod.rs
tests/: map_test.rs
