[package]
name = "potion_roguelike"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] } 
bevy-inspector-egui = "0.12"
serde = "1.0.136"
ron = "0.8.0"
bevy_asset_loader = { version = "0.12", features = ["2d"]}
heron = "4.0"
leafwing-input-manager = "0.5.1"
derive_more = "0.99.17"