[package]
name = "potion_roguelike"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
 # bevy = { version = "0.8", features = ["dynamic","bevy_asset", "bevy_winit", "render", "png", "x11"] } 
 bevy = { version = "0.8"} 
bevy-inspector-egui = "0.12"
serde = "1.0.136"
ron = "0.8.0"
bevy_asset_loader = { version = "0.12", features = ["2d"]}
bevy_kira_audio = {version = "0.12", features = ["wav"]}
heron = {version = "4.0", features = ["2d", "debug-2d"]}
strum = "*"
strum_macros = "*"
leafwing-input-manager = "0.5.1"
derive_more = "0.99.17"
bevy_procedural = {git="https://github.com/Braymatter/bevy_procedural", branch="master"}